k8s/memcached-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: esi-graphql-cache-service
spec:
  ports:
    - name: http
      port: 11211
      targetPort: 11211
  selector:
    app: esi-graphql-cache
