k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: esi-graphql-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: esi-graphql-web
